Actualizando manejo de borrado de archivos en descargas

--- a/FormatTools/templates/convert.html
+++ b/FormatTools/templates/convert.html
@@ -172,7 +172,7 @@
 {% block script_js %}
 <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
 <script src="{% static "js/bootstrap.min.js" %}"></script>
-<script src="/static/js/dropzone.js?12312"></script>
+<script src="{% static "js/dropzone.js" %}"></script>
 <script src="{% static "js/sweetalert.min.js" %}"></script>
-<script src="/static/js/main.js?123128"></script>
+<script src="{% static "js/main.js" %}"></script>
 {% endblock %}
