--- a/FormatTools/templates/convert.html
+++ b/FormatTools/templates/convert.html
@@ -4,7 +4,7 @@
 {% block css_links %}
   <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
   <link rel="stylesheet" href="{% static "css/dropzone.css" %}">
-  <link rel="stylesheet" href="/static/css/styles.css?47879">
+  <link rel="stylesheet" href="{% static "css/styles.css" %}">
   <link rel="stylesheet" href="https://github.com/tobiasahlin/SpinKit/blob/master/css/spinkit.css">
   <style type="text/css">
       .text-loading {top: 50%; position: absolute; right: 25%; color: #f5f5f5;}
