Agregando variable de configuracion para CDN

--- a/FormatTools/templates/base.html
+++ b/FormatTools/templates/base.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="http://datos.gob.mx/static/css/vendor.2107989e.css">
     <link rel="stylesheet" href="http://datos.gob.mx/static/css/style.4a96c47a.css">
-    <link rel="import" href="http://datos.gob.mx/static/bower_components/polymer/polymer.html">
-    <link rel="import" href="http://datos.gob.mx/static/bower_components/dgm-navbar/dgm-navbar.html">
-    <link rel="import" href="http://datos.gob.mx/static/bower_components/dgm-footer/dgm-footer.html">
+    <link rel="import" href="{{settings.CDN_GOB_ROOT_URL}}bower_components/polymer/polymer.html">
+    <link rel="import" href="{{settings.CDN_GOB_ROOT_URL}}bower_components/dgm-navbar/dgm-navbar.html">
+    <link rel="import" href="{{settings.CDN_GOB_ROOT_URL}}bower_components/dgm-footer/dgm-footer.html">
     {% block css_links %}{% endblock %}
 </head>
 <body>
