Arreglo de html y de settings

--- a/FormatTools/templates/convert.html
+++ b/FormatTools/templates/convert.html
@@ -146,7 +146,7 @@
         <h4></h4>
       </div> 
     </div>
-    !-- Modal -->
+    <!-- Modal -->
       <div class="modal fade modal-home" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
